--- a/src/main/resources/data/lotmcraft/worldgen/biome/space_biome.json
+++ b/src/main/resources/data/lotmcraft/worldgen/biome/space_biome.json
@@ -6,10 +6,10 @@
   "effects": {
     "sky_color": 0,
     "fog_color": 0,
-    "water_color": 0,
-    "water_fog_color": 0,
-    "grass_color": 0,
-    "foliage_color": 0,
+    "water_color": 4159204,
+    "water_fog_color": 329011,
+    "grass_color": 5470985,
+    "foliage_color": 5470985,
     "mood_sound": {
       "sound": "minecraft:ambient.cave",
       "tick_delay": 6000,
