--- a/src/main/resources/data/lotmcraft/worldgen/biome/space_biome.json
+++ b/src/main/resources/data/lotmcraft/worldgen/biome/space_biome.json
@@ -4,8 +4,8 @@
   "temperature_modifier": "none",
   "downfall": 0.0,
   "effects": {
-    "sky_color": 0,
-    "fog_color": 0,
+    "sky_color": 7907327,
+    "fog_color": 12638463,
     "water_color": 4159204,
     "water_fog_color": 329011,
     "grass_color": 5470985,
