--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ group = mod_group_id
 
 repositories {
     // Add here additional repositories if required by some of the dependencies below.
+    mavenCentral()
+    maven { url = 'https://maven.neoforged.net/releases/' }
+    maven { url = 'https://jitpack.io' }
 }
 
 base {
@@ -133,6 +136,8 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    implementation 'com.github.Querz:NBT:6.1'
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
