--- a/build.gradle
+++ b/build.gradle
@@ -121,8 +121,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 // "optional", meaning it will not be pulled by dependents of this mod.
 configurations {
     runtimeClasspath.extendsFrom localRuntime
-    include
-    implementation.extendsFrom(include)
+    jarJar
 }
 
 configurations.all {
@@ -135,14 +134,19 @@ configurations.all {
     }
 }
 
-tasks.named('jar', Jar).configure {
-    from configurations.include.collect { it.isDirectory() ? it : zipTree(it) }
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // Add this line
-}
-
 dependencies {
     implementation 'com.github.Querz:NBT:6.1'
-    include("com.zigythebird.playeranim:PlayerAnimationLibNeo:1.1.3+mc.1.21.1") {
+
+    // Use jarJar for bundling PlayerAnimationLibNeo
+    jarJar("com.zigythebird.playeranim:PlayerAnimationLibNeo:1.1.3+mc.1.21.1") {
+        exclude group: 'com.google.code.gson'
+        exclude group: 'org.slf4j'
+        exclude group: 'io.netty'
+        exclude group: 'it.unimi.dsi'
+    }
+
+    // Also add as implementation for compile-time
+    implementation("com.zigythebird.playeranim:PlayerAnimationLibNeo:1.1.3+mc.1.21.1") {
         exclude group: 'com.google.code.gson'
         exclude group: 'org.slf4j'
         exclude group: 'io.netty'
